Table chats {
    id bigint [pk]
}

Table links {
    id int [pk, increment]
    url text [not null, unique]
    last_update timestamp [not null]

    indexes {
        url
    }
}

Table tags {
    id int [pk, increment]
    chat_id bigint [not null]
    link_id int [not null]
    name varchar [not null]

    indexes {
        link_id
    }
}

Table links_chats {
    link_id int [not null]
    chat_id bigint [not null]

    indexes {
        (link_id, chat_id)
    }
}

Ref: links.id < links_chats.link_id
Ref: chats.id < links_chats.chat_id
Ref: tags.chat_id > chats.id
Ref: tags.link_id > links.id
